--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "request-ip": "^3.3.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0",
